--- a/data_preprocessor.ipynb
+++ b/data_preprocessor.ipynb
@@ -5,7 +5,7 @@
    "id": "1c067e4a",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kostaslazaros/FSIHDD/blob/master/data_preprocessor.ipynb)"
    ]
   },
   {
@@ -183,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +197,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "996f2b6e98019c29df53ccff772a8e3fe7cdecb0ba4b3f6ddb9be804d297dd3d"
+   }
   }
  },
  "nbformat": 4,
